// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render loaded market: binary 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "{\\"marketData\\":{\\"numberOfOutcomes\\":\\"2\\",\\"numTicks\\":\\"10000\\",\\"denominationToken\\":\\"_MASKED_denominationToken_FOR_DETERMINISM_\\",\\"endTime\\":\\"_MASKED_endTime_FOR_DETERMINISM_\\",\\"isFinalized\\":false,\\"description\\":\\"Can God create a stone so heavy that He cannot lift it?\\",\\"longDescription\\":\\"meh\\",\\"resolutionSource\\":\\"your mind\\",\\"outcomes\\":[],\\"marketCreationFee\\":\\"10000000000000000\\",\\"minPrice\\":\\"0\\",\\"maxPrice\\":\\"1000000000000000000\\",\\"marketType\\":\\"0\\"},\\"havingErrors\\":false}",
      ],
      "props": Object {},
      "type": "div",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                "Can God create a stone so heavy that He cannot lift it?",
              ],
              "props": Object {
                "className": "panel-title",
              },
              "type": "h3",
            },
          ],
          "props": Object {
            "className": "panel-heading",
          },
          "type": "div",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                "Resolution source:",
                " ",
                "your mind",
              ],
              "props": Object {},
              "type": "p",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        "Additional details:",
                        " ",
                        Object {
                          "children": null,
                          "props": Object {
                            "className": "glyphicon glyphicon-menu-up",
                          },
                          "type": "span",
                        },
                      ],
                      "props": Object {
                        "className": "btn btn-link",
                        "disabled": false,
                        "style": Object {
                          "padding": "0",
                        },
                        "type": "button",
                      },
                      "type": "button",
                    },
                  ],
                  "props": Object {},
                  "type": "p",
                },
                Object {
                  "children": Array [
                    "meh",
                  ],
                  "props": Object {
                    "style": Object {
                      "whiteSpace": "pre-wrap",
                    },
                  },
                  "type": "pre",
                },
              ],
              "props": Object {},
              "type": "div",
            },
            Object {
              "children": Array [
                "Possible outcomes:",
                " ",
                Object {
                  "children": Array [
                    "NO",
                  ],
                  "props": Object {
                    "className": "label label-danger",
                  },
                  "type": "span",
                },
                "",
                " ",
                "or ",
                Object {
                  "children": Array [
                    "YES",
                  ],
                  "props": Object {
                    "className": "label label-success",
                  },
                  "type": "span",
                },
              ],
              "props": Object {},
              "type": "p",
            },
            Object {
              "children": Array [
                "Traded shares:",
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            "NO",
                          ],
                          "props": Object {
                            "className": "label label-danger",
                          },
                          "type": "span",
                        },
                        ": TBD description",
                      ],
                      "props": Object {},
                      "type": "li",
                    },
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            "YES",
                          ],
                          "props": Object {
                            "className": "label label-success",
                          },
                          "type": "span",
                        },
                        ": TBD description",
                      ],
                      "props": Object {},
                      "type": "li",
                    },
                  ],
                  "props": Object {
                    "style": Object {
                      "listStyle": "none",
                    },
                  },
                  "type": "ul",
                },
              ],
              "props": Object {},
              "type": "p",
            },
          ],
          "props": Object {
            "className": "panel-body",
          },
          "type": "div",
        },
      ],
      "props": Object {
        "className": "panel panel-default",
      },
      "type": "div",
    },
  ],
  "props": Object {},
  "type": "div",
}
`;

exports[`Render loaded market: categorical 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "{\\"marketData\\":{\\"numberOfOutcomes\\":\\"3\\",\\"numTicks\\":\\"10000\\",\\"denominationToken\\":\\"_MASKED_denominationToken_FOR_DETERMINISM_\\",\\"endTime\\":\\"_MASKED_endTime_FOR_DETERMINISM_\\",\\"isFinalized\\":false,\\"description\\":\\"What is the best color?\\",\\"longDescription\\":\\"\\",\\"resolutionSource\\":\\"https://upload.wikimedia.org/wikipedia/commons/0/0e/Red-green-blue_flag.svg\\",\\"outcomes\\":[\\"Red\\",\\"Green\\",\\"Blue\\"],\\"marketCreationFee\\":\\"10000000000000000\\",\\"minPrice\\":\\"0\\",\\"maxPrice\\":\\"1000000000000000000\\",\\"marketType\\":\\"1\\"},\\"havingErrors\\":false}",
      ],
      "props": Object {},
      "type": "div",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                "What is the best color?",
              ],
              "props": Object {
                "className": "panel-title",
              },
              "type": "h3",
            },
          ],
          "props": Object {
            "className": "panel-heading",
          },
          "type": "div",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                "Resolution source:",
                " ",
                Object {
                  "children": Array [
                    "https://upload.wikimedia.org/wikipedia/commons/0/0e/Red-green-blue_flag.svg",
                  ],
                  "props": Object {
                    "href": "https://upload.wikimedia.org/wikipedia/commons/0/0e/Red-green-blue_flag.svg",
                    "target": "_blank",
                  },
                  "type": "a",
                },
              ],
              "props": Object {},
              "type": "p",
            },
            Object {
              "children": Array [
                "Possible outcomes:",
                " ",
                Object {
                  "children": Array [
                    "Red",
                  ],
                  "props": Object {
                    "className": "label label-primary",
                  },
                  "type": "span",
                },
                ",",
                " ",
                Object {
                  "children": Array [
                    "Green",
                  ],
                  "props": Object {
                    "className": "label label-primary",
                  },
                  "type": "span",
                },
                ",",
                " ",
                "or ",
                Object {
                  "children": Array [
                    "Blue",
                  ],
                  "props": Object {
                    "className": "label label-primary",
                  },
                  "type": "span",
                },
              ],
              "props": Object {},
              "type": "p",
            },
            Object {
              "children": Array [
                "Traded shares:",
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            "Red",
                          ],
                          "props": Object {
                            "className": "label label-primary",
                          },
                          "type": "span",
                        },
                        ": TBD description",
                      ],
                      "props": Object {},
                      "type": "li",
                    },
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            "Green",
                          ],
                          "props": Object {
                            "className": "label label-primary",
                          },
                          "type": "span",
                        },
                        ": TBD description",
                      ],
                      "props": Object {},
                      "type": "li",
                    },
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            "Blue",
                          ],
                          "props": Object {
                            "className": "label label-primary",
                          },
                          "type": "span",
                        },
                        ": TBD description",
                      ],
                      "props": Object {},
                      "type": "li",
                    },
                  ],
                  "props": Object {
                    "style": Object {
                      "listStyle": "none",
                    },
                  },
                  "type": "ul",
                },
              ],
              "props": Object {},
              "type": "p",
            },
          ],
          "props": Object {
            "className": "panel-body",
          },
          "type": "div",
        },
      ],
      "props": Object {
        "className": "panel panel-default",
      },
      "type": "div",
    },
  ],
  "props": Object {},
  "type": "div",
}
`;

exports[`Render loaded market: scalar 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "{\\"marketData\\":{\\"numberOfOutcomes\\":\\"2\\",\\"numTicks\\":\\"100\\",\\"denominationToken\\":\\"_MASKED_denominationToken_FOR_DETERMINISM_\\",\\"endTime\\":\\"_MASKED_endTime_FOR_DETERMINISM_\\",\\"isFinalized\\":false,\\"description\\":\\"How many states will there be in the United States at the market expiration?\\",\\"longDescription\\":\\"\\",\\"scalarDenomination\\":\\"states\\",\\"resolutionSource\\":\\"\\",\\"outcomes\\":[],\\"marketCreationFee\\":\\"10000000000000000\\",\\"minPrice\\":\\"0\\",\\"maxPrice\\":\\"100000000000000000000\\",\\"marketType\\":\\"2\\"},\\"havingErrors\\":false}",
      ],
      "props": Object {},
      "type": "div",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                "How many states will there be in the United States at the market expiration?",
              ],
              "props": Object {
                "className": "panel-title",
              },
              "type": "h3",
            },
          ],
          "props": Object {
            "className": "panel-heading",
          },
          "type": "div",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                "Resolution source:",
                " ",
                "General knowledge",
              ],
              "props": Object {},
              "type": "p",
            },
            Object {
              "children": Array [
                "Possible outcomes:",
                " ",
                Object {
                  "children": Array [
                    "any value between",
                    " ",
                    Object {
                      "children": Array [
                        "0",
                        " ",
                        "states",
                      ],
                      "props": Object {
                        "className": "label label-danger",
                      },
                      "type": "span",
                    },
                    " ",
                    "and",
                    " ",
                    Object {
                      "children": Array [
                        "100",
                        " ",
                        "states",
                      ],
                      "props": Object {
                        "className": "label label-success",
                      },
                      "type": "span",
                    },
                    " ",
                    "with step of",
                    " ",
                    "1",
                    " ",
                    "states",
                    ".",
                  ],
                  "props": Object {},
                  "type": "span",
                },
              ],
              "props": Object {},
              "type": "p",
            },
            Object {
              "children": Array [
                "Traded shares:",
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            "0",
                            " ",
                            "states",
                          ],
                          "props": Object {
                            "className": "label label-danger",
                          },
                          "type": "span",
                        },
                        ": TBD description",
                      ],
                      "props": Object {},
                      "type": "li",
                    },
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            "100",
                            " ",
                            "states",
                          ],
                          "props": Object {
                            "className": "label label-success",
                          },
                          "type": "span",
                        },
                        ": TBD description",
                      ],
                      "props": Object {},
                      "type": "li",
                    },
                  ],
                  "props": Object {
                    "style": Object {
                      "listStyle": "none",
                    },
                  },
                  "type": "ul",
                },
              ],
              "props": Object {},
              "type": "p",
            },
          ],
          "props": Object {
            "className": "panel-body",
          },
          "type": "div",
        },
      ],
      "props": Object {
        "className": "panel panel-default",
      },
      "type": "div",
    },
  ],
  "props": Object {},
  "type": "div",
}
`;

exports[`Render loaded market: scalar2 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "{\\"marketData\\":{\\"numberOfOutcomes\\":\\"2\\",\\"numTicks\\":\\"1000\\",\\"denominationToken\\":\\"_MASKED_denominationToken_FOR_DETERMINISM_\\",\\"endTime\\":\\"_MASKED_endTime_FOR_DETERMINISM_\\",\\"isFinalized\\":false,\\"description\\":\\"How much will EUR cost in USD at market expiration?\\",\\"longDescription\\":\\"\\",\\"scalarDenomination\\":\\"USD\\",\\"resolutionSource\\":\\"\\",\\"outcomes\\":[],\\"marketCreationFee\\":\\"10000000000000000\\",\\"minPrice\\":\\"1000000000000000000\\",\\"maxPrice\\":\\"1300000000000000000\\",\\"marketType\\":\\"2\\"},\\"havingErrors\\":false}",
      ],
      "props": Object {},
      "type": "div",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                "How much will EUR cost in USD at market expiration?",
              ],
              "props": Object {
                "className": "panel-title",
              },
              "type": "h3",
            },
          ],
          "props": Object {
            "className": "panel-heading",
          },
          "type": "div",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                "Resolution source:",
                " ",
                "General knowledge",
              ],
              "props": Object {},
              "type": "p",
            },
            Object {
              "children": Array [
                "Possible outcomes:",
                " ",
                Object {
                  "children": Array [
                    "any value between",
                    " ",
                    Object {
                      "children": Array [
                        "1",
                        " ",
                        "USD",
                      ],
                      "props": Object {
                        "className": "label label-danger",
                      },
                      "type": "span",
                    },
                    " ",
                    "and",
                    " ",
                    Object {
                      "children": Array [
                        "1.3",
                        " ",
                        "USD",
                      ],
                      "props": Object {
                        "className": "label label-success",
                      },
                      "type": "span",
                    },
                    " ",
                    "with step of",
                    " ",
                    "0.0003",
                    " ",
                    "USD",
                    ".",
                  ],
                  "props": Object {},
                  "type": "span",
                },
              ],
              "props": Object {},
              "type": "p",
            },
            Object {
              "children": Array [
                "Traded shares:",
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            "1",
                            " ",
                            "USD",
                          ],
                          "props": Object {
                            "className": "label label-danger",
                          },
                          "type": "span",
                        },
                        ": TBD description",
                      ],
                      "props": Object {},
                      "type": "li",
                    },
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            "1.3",
                            " ",
                            "USD",
                          ],
                          "props": Object {
                            "className": "label label-success",
                          },
                          "type": "span",
                        },
                        ": TBD description",
                      ],
                      "props": Object {},
                      "type": "li",
                    },
                  ],
                  "props": Object {
                    "style": Object {
                      "listStyle": "none",
                    },
                  },
                  "type": "ul",
                },
              ],
              "props": Object {},
              "type": "p",
            },
          ],
          "props": Object {
            "className": "panel-body",
          },
          "type": "div",
        },
      ],
      "props": Object {
        "className": "panel panel-default",
      },
      "type": "div",
    },
  ],
  "props": Object {},
  "type": "div",
}
`;

exports[`render "loading" bar 1`] = `
<div>
  <div>
    {"marketData":null,"havingErrors":false}
  </div>
  <div
    className="panel panel-default"
  >
    <div
      className="panel-heading"
    >
      <h3
        className="panel-title"
      >
        Loading market data...
      </h3>
    </div>
    <div
      className="panel-body"
    >
      <div
        className="progress"
      >
        <div
          aria-valuemax={1}
          aria-valuemin={0}
          aria-valuenow={0.029126213592232997}
          className="progress-bar progress-bar-info active progress-bar-striped"
          role="progressbar"
          style={
            Object {
              "width": "2.913%",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`render "loading" bar with errors 1`] = `
<div>
  <div>
    {"marketData":null,"havingErrors":true}
  </div>
  <div
    className="panel panel-default"
  >
    <div
      className="panel-heading"
    >
      <h3
        className="panel-title"
      >
        Loading market data...
      </h3>
    </div>
    <div
      className="panel-body"
    >
      <div
        className="progress"
      >
        <div
          aria-valuemax={1}
          aria-valuemin={0}
          aria-valuenow={0.029126213592232997}
          className="progress-bar progress-bar-danger active progress-bar-striped"
          role="progressbar"
          style={
            Object {
              "width": "2.913%",
            }
          }
        />
      </div>
      <div>
        An error happened while trying to fetch market data. Try again or wait a bit.
      </div>
    </div>
  </div>
</div>
`;
